--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,24 +15,24 @@ jobs:
     runs-on: ${{ matrix.platform }}
     steps:
     - uses: actions/checkout@v3
-    - name: setup node
+    - name: Setup Node.js
       uses: actions/setup-node@v3
       with:
-        node-version: 16
-    - name: install Rust stable
+        node-version: '18'  # Node.js sürümünü 18 olarak güncelledik
+    - name: Install Rust stable
       uses: dtolnay/rust-toolchain@stable
-    - name: install dependencies (ubuntu only)
+    - name: Install dependencies (Ubuntu only)
       if: matrix.platform == 'ubuntu-20.04'
       run: |
         sudo apt-get update
         sudo apt-get install -y libgtk-3-dev libwebkit2gtk-4.0-dev libappindicator3-dev librsvg2-dev patchelf
-    - name: install app dependencies and build it
+    - name: Install app dependencies and build it
       run: yarn && yarn build
     - uses: tauri-apps/tauri-action@v0
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
-        tagName: app-v__VERSION__ # the action automatically replaces \_\_VERSION\_\_ with the app version
+        tagName: app-v__VERSION__ # the action automatically replaces __VERSION__ with the app version
         releaseName: "App v__VERSION__"
         releaseBody: "See the assets to download this version and install."
         releaseDraft: true
