--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,19 +26,13 @@ jobs:
       run: |
         sudo apt-get update
         sudo apt-get install -y libgtk-3-dev libwebkit2gtk-4.0-dev libappindicator3-dev librsvg2-dev patchelf
-    - name: Install dependencies (MacOS only)
-      if: matrix.platform == 'macos-latest'
-      run: brew install gtk+3 webkit2gtk libappindicator librsvg patchelf
-    - name: Install dependencies (Windows only)
-      if: matrix.platform == 'windows-latest'
-      run: choco install gtk-runtime webkit2gtk libappindicator librsvg patchelf
     - name: Install app dependencies and build it
       run: yarn && yarn build
     - uses: tauri-apps/tauri-action@v0
-      with:
-        tagName: 'Alpha-<version>'
-        releaseName: "Alpha <version> (initial development)"
-        releaseBody: "A new version has been released! You can look at the appearance features."  
-        releaseDraft: true
       env:
         GITHUB_TOKEN: ${{ secrets.MY_GITHUB_TOKEN }}
+      with:
+        tagName: Alpha
+        releaseName: "Alpha __VERSION__ (initial development)" 
+        releaseBody: "A new version has been released! You can look at the appearance features."  
+        releaseDraft: true  bunda oluştu
