--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,5 @@
 name: "build"
+
 on:
   push:
     branches:
@@ -6,33 +7,40 @@ on:
   workflow_dispatch:
 
 jobs:
+
   publish-tauri:
     strategy:
       fail-fast: false
       matrix:
         platform: [macos-latest, ubuntu-20.04, windows-latest]
-
+        
     runs-on: ${{ matrix.platform }}
+    
     steps:
     - uses: actions/checkout@v3
+    
     - name: Setup Node.js
       uses: actions/setup-node@v3
       with:
         node-version: '18'
+        
     - name: Install Rust stable
       uses: dtolnay/rust-toolchain@stable
+        
     - name: Install dependencies (Ubuntu only)
       if: matrix.platform == 'ubuntu-20.04'
       run: |
         sudo apt-get update
         sudo apt-get install -y libgtk-3-dev libwebkit2gtk-4.0-dev libappindicator3-dev librsvg2-dev patchelf
+        
     - name: Install app dependencies and build it
       run: yarn && yarn build
+        
     - uses: tauri-apps/tauri-action@v0
       env:
         GITHUB_TOKEN: ${{ secrets.MY_GITHUB_TOKEN }}
       with:
-        tagName: Alpha
-        releaseName: "Alpha __VERSION__ (initial development)" 
-        releaseBody: "A new version has been released! You can look at the appearance features."  
-        releaseDraft: true  bunda oluştu
+        tagName: 'v${{ steps.package-version.outputs.version }}'
+        releaseName: 'Release ${{ steps.package-version.outputs.version }}'
+        releaseBody: 'See the assets to download and install this version.'
+        releaseDraft: true
