--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,7 +40,7 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.MY_GITHUB_TOKEN }}
       with:
-        tagName: 'alpha-${{ steps.package-version.outputs.version }}'
-        releaseName: 'Alpha ${{ steps.package-version.outputs.version }}'
+        tagName: 'Alpha'
+        releaseName: 'Alpha'
         releaseBody: 'A new version has been released! Please try it out and provide us with your feedback!'
-        releaseDraft: true
+        releaseDraft: false
